--- a/sass/components/_components.containers.scss
+++ b/sass/components/_components.containers.scss
@@ -6,4 +6,8 @@
     display: grid;
     grid-template-columns: 1fr 3fr;
     border-top: 4px solid #e7d117;
+    @media(max-width: 980px){
+        grid-template-columns: 1fr;
+        border-top: 0px;
+    }
 }
