--- a/sass/components/_components.listItems.scss
+++ b/sass/components/_components.listItems.scss
@@ -50,6 +50,9 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 20px;
+        @media(max-width: 1050px){
+            grid-template-columns: 1fr 1fr;
+        }
     }
 
     &.-marginTop{
