--- a/sass/components/_components.listItems.scss
+++ b/sass/components/_components.listItems.scss
@@ -44,6 +44,9 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-gap: 20px;
+        @media(max-width: 600px){
+            grid-template-columns: 1fr;
+        }
     }
 
     &__posts{
@@ -52,6 +55,9 @@
         grid-gap: 20px;
         @media(max-width: 1050px){
             grid-template-columns: 1fr 1fr;
+        }
+        @media(max-width: 600px){
+            grid-template-columns: 1fr;
         }
     }
 
