--- a/style.css
+++ b/style.css
@@ -2065,6 +2065,15 @@ ul.tagposts-list li {
     width: 100%;
     height: 100%;
     color: #fff;
+    line-height: 1.1;
+    margin: 0px;
+    background: #e7d117;
+    color: #fff;
+    font-family: "Bree serif";
+    font-size: 16px;
+}
+.post-rendered.show-author .rendered-img .render-author a:hover{
+    opacity: 0.8;
 }
 
 .post-rendered .hovered {
