--- a/sass/components/_components.sidebar.scss
+++ b/sass/components/_components.sidebar.scss
@@ -45,6 +45,7 @@
                         color: $secondary;
                         font-size: 18px;
                         transition: 300ms ease;
+                        font-family: $secondaryFont;
                         &:hover{
                             transform: translateX(10px);
                         }
