--- a/sass/components/_components.containers.scss
+++ b/sass/components/_components.containers.scss
@@ -10,4 +10,8 @@
         grid-template-columns: 1fr;
         border-top: 0px;
     }
+
+    .dashboard__sidebar{
+        position: relative;
+    }
 }
