--- a/sass/components/_components.hiddenTopic.scss
+++ b/sass/components/_components.hiddenTopic.scss
@@ -7,6 +7,9 @@
     h3{
         font-size: 20px;
         margin: 0px;
+        a{
+            color: $black !important;
+        }
     }
     button{
         display: inline-block;
