--- a/sass/components/_components.sidebar.scss
+++ b/sass/components/_components.sidebar.scss
@@ -2,17 +2,26 @@
     @media(max-width: 980px){
         padding: 20px;
     }
-    position: fixed;
-    width: 250px;
-    position: sticky;
-    top: 50px;
-    display: inline-block;
-    height: auto;
-    transition: 100ms ease;
+
+    @media(min-width: 980px){
+        position: fixed;
+        width: 250px;
+        position: sticky;
+        top: 50px;
+        display: inline-block;
+        height: auto;
+        transition: 100ms ease;
+    }
+
+
 
     &.-hidden{
         opacity: 0;
         transform: scale(0.8);
+        @media(max-width: 980px){
+            opacity: 1;
+            transform: scale(1);
+        }
     }
     .profile{
         display: flex;
