--- a/sass/components/_components.sidebar.scss
+++ b/sass/components/_components.sidebar.scss
@@ -1,6 +1,7 @@
 .sidebar__content{
     @media(max-width: 980px){
         padding: 20px;
+        width: 100%;
     }
 
     @media(min-width: 980px){
