--- a/sass/components/_components.listItems.scss
+++ b/sass/components/_components.listItems.scss
@@ -28,10 +28,11 @@
         }
 
         &.-author{
-            background-position: 47% 30%;
-            background-size: cover;
+            background-position: left;
+            background-size: contain;
             background-color: transparent;
             height: 200px;
+            background-repeat: no-repeat;
             border-top: 4px solid $primary;
             border-bottom: 4px solid $primary;
             h3{
