--- a/style.css
+++ b/style.css
@@ -2618,7 +2618,7 @@ font-size: 18px !important;
     padding: 10px 10px;
     min-height: 120px;
     display: flex;
-    flex-direction: column;
+    /*flex-direction: column;*/
     justify-content: center;
     font-family: 'Bree Serif', serif;
 }
