--- a/style.css
+++ b/style.css
@@ -2649,7 +2649,8 @@ font-size: 18px !important;
     display: block;
     width: 100%;
     height: 100%;
-    color: #111;
+    /*color: #111;*/
+    color: #b29f93;
     display: flex;
     align-items: center;
 }
