--- a/style.css
+++ b/style.css
@@ -2650,7 +2650,7 @@ font-size: 18px !important;
     width: 100%;
     height: 100%;
     /*color: #111;*/
-    color: #b29f93;
+    color: #b29f93 !important;
     display: flex;
     align-items: center;
 }
